# codeweave

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  config.example.json  start-ngrok.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  codeweave-architecture-improvement-plan.md  connect-chatgpt.md  connect-claude.md  connect-perplexity.md  implementation.md  improvement-plan.md  installation.md  phase8-optimization-evaluation.md  tool-profile-evaluation.md  tools.md  warm-shell-diff-review.md
eval/: Cargo.toml  README.md
eval/baseline/: v1.json  v2.json
eval/baseline/crawlerai/: v1.json  v2.json
eval/baseline/live/: codeweave.json  crawlerai.json
eval/fixtures/: malformed-code-retrieve.json  tool-schemas.json
eval/fixtures/references/: shared-service-golden.json
eval/fixtures/references/receiver-qualified-rust/: expected.json
eval/fixtures/references/receiver-qualified-rust/src/: consumer.rs  lib.rs  validator.rs
eval/operations/: codeweave.json  crawlerai.json
eval/queries/: codeweave.json  crawlerai.json
eval/src/: live.rs  main.rs
eval/tests/: phase0.rs  phase3.rs
src/: bash.rs  cli.rs  compatibility.rs  contracts.rs  intelligence.rs  lib.rs  main.rs  manager.rs  mcp_transport.rs  model.rs  process_runtime.rs  reference_service.rs  repository.rs  retrieval.rs  security.rs  symbols.rs  task_runtime.rs  tasks.rs
src/bash/: execution.rs  readiness.rs  tests.rs
src/index/: chunks.rs  context.rs  handle.rs  lines.rs  metadata.rs  mod.rs  path_filter.rs  references.rs  scan.rs  search.rs  tests.rs
src/intelligence/: mod.rs  normalize.rs  protocol.rs  service.rs  sync.rs  tests.rs  worker.rs  workspace_edit.rs
src/tools/: mod.rs
src/tools/schemas/: bash.rs  edits.rs  git.rs  intelligence.rs  mod.rs  retrieval.rs  workspace.rs
src/workspace/: commit.rs  edit.rs  events.rs  fetch.rs  git.rs  io_helpers.rs  journal.rs  mod.rs  retrieve.rs  run_attribution.rs  tests.rs  util.rs  validation.rs
tests/: regression_gates.rs
