[package]
name = "codeweave-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first Rust MCP server for safe code search, editing, Git, and development commands"
readme = "README.md"
keywords = ["mcp", "ai", "developer-tools", "code-search", "rust"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
cap-std = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
ignore = "0.4"
notify = "8.2"
parking_lot = "0.12"
regex = "1.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.7"
subtle = "2.6"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3.20"
