[workspace]
members = ["."]

[lib]
name = "codeweave_rust"
path = "src/lib.rs"

[[bin]]
name = "codeweave-rust"
path = "src/main.rs"

[package]
name = "codeweave-rust"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Local-first Rust MCP server for safe code search, editing, Git, and development commands"
readme = "README.md"
keywords = ["mcp", "ai", "developer-tools", "code-search", "rust"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "tracing"] }
base64 = "0.22"
cap-std = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "service", "tokio"] }
ignore = "0.4"
notify = "8.2"
parking_lot = "0.12"
regex = "1.11"
rayon = "1.10"
rmcp = { version = "1.8", default-features = false, features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = "0.10"
similar = "2.7"
subtle = "2.6"
tokio = { version = "1.47", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.20"
